# Ponderer

./: .gitignore  Cargo.toml  README.md  backend-fix.patch
.beads/: beads.db  beads.db-shm  beads.left.meta.json  issues.jsonl  last-touched
.beads/export-state/: a642d175eee1a110.json
docs/: BACKEND_API_SPEC.md  BACKEND_PARITY_VALIDATION.md  LIVING_LOOP_DESIGN.md  LIVING_LOOP_SPEC.md  LIVING_LOOP_STATUS.md  PLUGIN_ARCHITECTURE.md  README.md
plugins/browser-orb/: README.md  plugin.toml  pyproject.toml  settings.schema.json
plugins/browser-orb/browser_orb/: __init__.md  server.md  server.py
plugins/browser-orb/scripts/: install_portable.md  install_portable.sh  install_to_ponderer.md  install_to_ponderer.sh  run_plugin.md  run_plugin.sh
plugins/graphchan-orb/: README.md  plugin.toml  pyproject.toml  settings.schema.json  tools.json
plugins/graphchan-orb/graphchan_orb/: __init__.md  __init__.py  client.md  client.py  plugin.md  plugin.py  server.md  server.py
plugins/graphchan-orb/scripts/: install_portable.md  install_portable.sh  install_to_ponderer.md  install_to_ponderer.sh  run_plugin.md  run_plugin.sh
plugins/graphchan-orb/tests/: test_client.md  test_client.py  test_contract.md  test_contract.py
plugins/image-orb/: .gitignore  README.md  SKILL.md  plugin.toml  pyproject.toml  settings.schema.json  settings.schema.md
plugins/image-orb/image_orb/: __init__.md  bootstrap.md  bootstrap.py  server.md  server.py
plugins/image-orb/scripts/: install_portable.md  install_portable.sh  install_to_ponderer.md  install_to_ponderer.sh  run_plugin.md  run_plugin.sh
plugins/sdk/python/: README.md  pyproject.toml
plugins/sdk/python/ponderer_plugin_sdk/: __init__.md  __init__.py  contract.md  contract.py  models.md  models.py  plugin.md  plugin.py  protocol.md  protocol.py  server.md  server.py  testing.md  testing.py
plugins/sdk/python/tests/: test_conformance.md  test_conformance.py
scripts/: validate_living_loop_acceptance.md  validate_living_loop_acceptance.sh
src/: api.md  api.rs  comfy_client.rs  config.md  config.rs  database.md  database.rs  llm_client.rs  main.md  main.rs
(+37 files in other folders)
