[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-orb"
version = "0.1.0"
description = "Portable agent-browser runtime plugin for Ponderer"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["browser_orb"]
