[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ponderer-plugin-sdk"
version = "0.1.0"
description = "Protocol v1 SDK for Ponderer subprocess plugins"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["ponderer_plugin_sdk"]

